Convert fractional parts to 32-bit hexadecimal constants

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "9606eb9e",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "4f56ab7c",
    "metadata": {},
    "outputs": [
@@ -663,6 +663,45 @@
       "\n",
       "... (calculated for all 64 primes)\n",
       "Total fractional parts calculated: 64\n",
+      "======================================================================\n",
+      "\n",
+      "======================================================================\n",
+      "Converting Fractional Parts to 32-bit Hexadecimal Constants\n",
+      "======================================================================\n",
+      "K[ 0] = 0x428a2f98  (prime =   2)\n",
+      "K[ 1] = 0x71374491  (prime =   3)\n",
+      "K[ 2] = 0xb5c0fbcf  (prime =   5)\n",
+      "K[ 3] = 0xe9b5dba5  (prime =   7)\n",
+      "K[ 4] = 0x3956c25b  (prime =  11)\n",
+      "K[ 5] = 0x59f111f1  (prime =  13)\n",
+      "K[ 6] = 0x923f82a4  (prime =  17)\n",
+      "K[ 7] = 0xab1c5ed5  (prime =  19)\n",
+      "K[ 8] = 0xd807aa98  (prime =  23)\n",
+      "K[ 9] = 0x12835b01  (prime =  29)\n",
+      "\n",
+      "... (calculated for all 64 primes)\n",
+      "\n",
+      "Total constants generated: 64\n",
+      "\n",
+      "======================================================================\n",
+      "All 64 SHA-256 Round Constants (K)\n",
+      "======================================================================\n",
+      "K[ 0- 3]: 0x428a2f98  0x71374491  0xb5c0fbcf  0xe9b5dba5\n",
+      "K[ 4- 7]: 0x3956c25b  0x59f111f1  0x923f82a4  0xab1c5ed5\n",
+      "K[ 8-11]: 0xd807aa98  0x12835b01  0x243185be  0x550c7dc3\n",
+      "K[12-15]: 0x72be5d74  0x80deb1fe  0x9bdc06a7  0xc19bf174\n",
+      "K[16-19]: 0xe49b69c1  0xefbe4786  0x0fc19dc6  0x240ca1cc\n",
+      "K[20-23]: 0x2de92c6f  0x4a7484aa  0x5cb0a9dc  0x76f988da\n",
+      "K[24-27]: 0x983e5152  0xa831c66d  0xb00327c8  0xbf597fc7\n",
+      "K[28-31]: 0xc6e00bf3  0xd5a79147  0x06ca6351  0x14292967\n",
+      "K[32-35]: 0x27b70a85  0x2e1b2138  0x4d2c6dfc  0x53380d13\n",
+      "K[36-39]: 0x650a7354  0x766a0abb  0x81c2c92e  0x92722c85\n",
+      "K[40-43]: 0xa2bfe8a1  0xa81a664b  0xc24b8b70  0xc76c51a3\n",
+      "K[44-47]: 0xd192e819  0xd6990624  0xf40e3585  0x106aa070\n",
+      "K[48-51]: 0x19a4c116  0x1e376c08  0x2748774c  0x34b0bcb5\n",
+      "K[52-55]: 0x391c0cb3  0x4ed8aa4a  0x5b9cca4f  0x682e6ff3\n",
+      "K[56-59]: 0x748f82ee  0x78a5636f  0x84c87814  0x8cc70208\n",
+      "K[60-63]: 0x90befffa  0xa4506ceb  0xbef9a3f7  0xc67178f2\n",
       "======================================================================\n"
      ]
     }
@@ -775,7 +814,45 @@
     "\n",
     "print(f\"\\n... (calculated for all 64 primes)\")\n",
     "print(f\"Total fractional parts calculated: {len(fractional_parts)}\")\n",
-    "print(\"=\" * 70)"
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# STEP 3: Convert Fractional Parts to 32-bit Hexadecimal\n",
+    "# ----------------------------------------------------------------------------\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"Converting Fractional Parts to 32-bit Hexadecimal Constants\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# Convert fractional parts to 32-bit hex values\n",
+    "hex_constants = []\n",
+    "\n",
+    "for i, frac in enumerate(fractional_parts):\n",
+    "    # Multiply by 2^32 to get the first 32 bits\n",
+    "    # Convert to unsigned 32-bit integer\n",
+    "    value = np.uint32(frac * (2**32))\n",
+    "    hex_constants.append(value)\n",
+    "    \n",
+    "    # Display first 10 as examples\n",
+    "    if i < 10:\n",
+    "        print(f\"K[{i:2d}] = 0x{value:08x}  (prime = {primes_64[i]:3d})\")\n",
+    "\n",
+    "print(f\"\\n... (calculated for all 64 primes)\")\n",
+    "print(f\"\\nTotal constants generated: {len(hex_constants)}\")\n",
+    "\n",
+    "# Display all 64 constants in a formatted table\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"All 64 SHA-256 Round Constants (K)\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "for i in range(0, 64, 4):\n",
+    "    # Print 4 constants per line\n",
+    "    line = \"  \".join([f\"0x{hex_constants[j]:08x}\" for j in range(i, min(i+4, 64))])\n",
+    "    print(f\"K[{i:2d}-{min(i+3, 63):2d}]: {line}\")\n",
+    "\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
