--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "id": "9606eb9e",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "id": "4f56ab7c",
    "metadata": {},
    "outputs": [
@@ -702,6 +702,22 @@
       "K[52-55]: 0x391c0cb3  0x4ed8aa4a  0x5b9cca4f  0x682e6ff3\n",
       "K[56-59]: 0x748f82ee  0x78a5636f  0x84c87814  0x8cc70208\n",
       "K[60-63]: 0x90befffa  0xa4506ceb  0xbef9a3f7  0xc67178f2\n",
+      "======================================================================\n",
+      "\n",
+      "======================================================================\n",
+      "Verification Against FIPS 180-4 Standard\n",
+      "======================================================================\n",
+      "\n",
+      "✓ SUCCESS! All 64 constants match FIPS 180-4 specification!\n",
+      "\n",
+      "Verification: 64 calculated = 64 official\n",
+      "\n",
+      "Sample verification (first 5 constants):\n",
+      "✓ K[0]: calculated = 0x428a2f98, official = 0x428a2f98\n",
+      "✓ K[1]: calculated = 0x71374491, official = 0x71374491\n",
+      "✓ K[2]: calculated = 0xb5c0fbcf, official = 0xb5c0fbcf\n",
+      "✓ K[3]: calculated = 0xe9b5dba5, official = 0xe9b5dba5\n",
+      "✓ K[4]: calculated = 0x3956c25b, official = 0x3956c25b\n",
       "======================================================================\n"
      ]
     }
@@ -852,6 +868,61 @@
     "\n",
     "print(\"=\" * 70)\n",
     "\n",
+    "\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# STEP 4: Verify Against FIPS 180-4 Standard (Page 11)\n",
+    "# ----------------------------------------------------------------------------\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"Verification Against FIPS 180-4 Standard\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# Official K constants from FIPS 180-4, page 11\n",
+    "official_K = [\n",
+    "    0x428a2f98, 0x71374491, 0xb5c0fbcf, 0xe9b5dba5,\n",
+    "    0x3956c25b, 0x59f111f1, 0x923f82a4, 0xab1c5ed5,\n",
+    "    0xd807aa98, 0x12835b01, 0x243185be, 0x550c7dc3,\n",
+    "    0x72be5d74, 0x80deb1fe, 0x9bdc06a7, 0xc19bf174,\n",
+    "    0xe49b69c1, 0xefbe4786, 0x0fc19dc6, 0x240ca1cc,\n",
+    "    0x2de92c6f, 0x4a7484aa, 0x5cb0a9dc, 0x76f988da,\n",
+    "    0x983e5152, 0xa831c66d, 0xb00327c8, 0xbf597fc7,\n",
+    "    0xc6e00bf3, 0xd5a79147, 0x06ca6351, 0x14292967,\n",
+    "    0x27b70a85, 0x2e1b2138, 0x4d2c6dfc, 0x53380d13,\n",
+    "    0x650a7354, 0x766a0abb, 0x81c2c92e, 0x92722c85,\n",
+    "    0xa2bfe8a1, 0xa81a664b, 0xc24b8b70, 0xc76c51a3,\n",
+    "    0xd192e819, 0xd6990624, 0xf40e3585, 0x106aa070,\n",
+    "    0x19a4c116, 0x1e376c08, 0x2748774c, 0x34b0bcb5,\n",
+    "    0x391c0cb3, 0x4ed8aa4a, 0x5b9cca4f, 0x682e6ff3,\n",
+    "    0x748f82ee, 0x78a5636f, 0x84c87814, 0x8cc70208,\n",
+    "    0x90befffa, 0xa4506ceb, 0xbef9a3f7, 0xc67178f2\n",
+    "]\n",
+    "\n",
+    "# Compare our calculated values with official values\n",
+    "all_match = True\n",
+    "mismatches = []\n",
+    "\n",
+    "for i in range(64):\n",
+    "    if hex_constants[i] != official_K[i]:\n",
+    "        all_match = False\n",
+    "        mismatches.append(i)\n",
+    "\n",
+    "if all_match:\n",
+    "    print(\"\\n✓ SUCCESS! All 64 constants match FIPS 180-4 specification!\")\n",
+    "    print(f\"\\nVerification: {len(hex_constants)} calculated = {len(official_K)} official\")\n",
+    "else:\n",
+    "    print(f\"\\n✗ MISMATCH! {len(mismatches)} constants do not match:\")\n",
+    "    for i in mismatches:\n",
+    "        print(f\"  K[{i}]: calculated = 0x{hex_constants[i]:08x}, \"\n",
+    "              f\"official = 0x{official_K[i]:08x}\")\n",
+    "\n",
+    "# Display a few examples of matching values\n",
+    "print(\"\\nSample verification (first 5 constants):\")\n",
+    "for i in range(5):\n",
+    "    match_str = \"✓\" if hex_constants[i] == official_K[i] else \"✗\"\n",
+    "    print(f\"{match_str} K[{i}]: calculated = 0x{hex_constants[i]:08x}, \"\n",
+    "          f\"official = 0x{official_K[i]:08x}\")\n",
+    "\n",
+    "print(\"=\" * 70)\n",
     "\n"
    ]
   }
