--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 59,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 61,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "id": "9606eb9e",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "id": "4f56ab7c",
    "metadata": {},
    "outputs": [
@@ -924,6 +924,16 @@
     "\n",
     "print(\"=\" * 70)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79d1efda",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "This problem successfully generated all 64 round constants (K) used in the SHA-256 algorithm by calculating the first 32 bits of the fractional parts of cube roots of the first 64 prime numbers. The implementation used a trial division algorithm to generate primes, numpy's cbrt function for cube root calculations, and bit manipulation to extract the 32-bit fractional representations. All 64 calculated constants were verified to exactly match the official values specified in FIPS 180-4 (page 11), confirming the correctness of the implementation. These constants, derived from a transparent mathematical process, exemplify the \"nothing up my sleeve\" principle in cryptographic design, ensuring no hidden weaknesses or backdoors in the algorithm."
    ]
   }
  ],
