--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
+   "id": "ea303b3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================================\n",
+    "# IMPORTS - All package imports for this notebook\n",
+    "# ============================================================================\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -43,7 +56,7 @@
     "# ----------------------------------------------------------------------------\n",
     "# PART 1: Parity Function\n",
     "# ----------------------------------------------------------------------------\n",
-    "import numpy as np\n",
+    "\n",
     "def Parity(x, y, z):\n",
     "    \"\"\"\n",
     "\n",
@@ -249,18 +262,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "55444694",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parity(12, 10, 6) = 0\n",
-      "Binary: 0b0\n",
-      "Test 1.2: Parity(0, 0, 0) = 0 (Expected: 0)\n",
-      "Test 1.3: Parity(all 1s) = 0xffffffff (Expected: 0xffffffff)\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Test 1 the Parity function\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m x = \u001b[43mnp\u001b[49m.uint32(\u001b[32m0b1100\u001b[39m)\n\u001b[32m      3\u001b[39m y = np.uint32(\u001b[32m0b1010\u001b[39m)\n\u001b[32m      4\u001b[39m z = np.uint32(\u001b[32m0b0110\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
      ]
     }
    ],
@@ -291,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -339,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -397,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -443,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -489,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -535,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "9606eb9e",
    "metadata": {},
    "outputs": [
@@ -631,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "4f56ab7c",
    "metadata": {},
    "outputs": [
@@ -727,7 +741,7 @@
     "# PROBLEM 2: Fractional Parts of Cube Roots\n",
     "# ============================================================================\n",
     "\n",
-    "import numpy as np\n",
+    "\n",
     "\n",
     "# ----------------------------------------------------------------------------\n",
     "# STEP 1: Prime Number Generator\n",
