--- a/problems.ipynb
+++ b/problems.ipynb
@@ -949,6 +949,39 @@
     "\n",
     "This problem successfully generated all 64 round constants (K) used in the SHA-256 algorithm by calculating the first 32 bits of the fractional parts of cube roots of the first 64 prime numbers. The implementation used a trial division algorithm to generate primes, numpy's cbrt function for cube root calculations, and bit manipulation to extract the 32-bit fractional representations. All 64 calculated constants were verified to exactly match the official values specified in FIPS 180-4 (page 11), confirming the correctness of the implementation. These constants, derived from a transparent mathematical process, exemplify the \"nothing up my sleeve\" principle in cryptographic design, ensuring no hidden weaknesses or backdoors in the algorithm."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e54e63d",
+   "metadata": {},
+   "source": [
+    "## Problem 3: Padding\n",
+    "\n",
+    "### Introduction\n",
+    "\n",
+    "This problem implements the message padding and parsing mechanism for SHA-256 as specified in FIPS 180-4, Sections 5.1.1 and 5.2.1. SHA-256 requires that messages be padded to a multiple of 512 bits before processing. The padding ensures that messages of any length can be processed in uniform 512-bit blocks. The padding scheme appends a '1' bit, followed by zero or more '0' bits, and concludes with a 64-bit representation of the original message length. This standardized padding is crucial for the security of the hash function, as it prevents length extension attacks and ensures that different messages cannot produce the same padded output.\n",
+    "\n",
+    "### Solution Approach\n",
+    "\n",
+    "The solution implements a Python generator function that yields 512-bit (64-byte) blocks from a message. The function first calculates the required padding: append a byte with value 0x80 (binary 10000000), then add enough zero bytes so that the message length plus padding is 64 bytes short of a multiple of 512 bits (64 bytes). Finally, append the original message length as a 64-bit big-endian integer. The generator yields each complete 512-bit block as a bytes object, making it memory-efficient for processing large messages.\n",
+    "\n",
+    "### References\n",
+    "\n",
+    "**FIPS 180-4: Secure Hash Standard**\n",
+    "- National Institute of Standards and Technology (NIST)\n",
+    "- URL: https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf\n",
+    "- Section 5.1.1, Page 13 - SHA-256 Padding\n",
+    "- Section 5.2.1, Page 14 - SHA-256 Parsing\n",
+    "- Relevance: Official specification for message padding and block parsing required before hash computation.\n",
+    "\n",
+    "**Wikipedia - Padding (cryptography)**\n",
+    "- URL: https://en.wikipedia.org/wiki/Padding_(cryptography)\n",
+    "- Relevance: Explains why padding is necessary in cryptographic hash functions and describes different padding schemes including Merkle-Damgård construction used in SHA-256.\n",
+    "\n",
+    "**Python Documentation - Generators**\n",
+    "- URL: https://docs.python.org/3/howto/functional.html#generators\n",
+    "- Relevance: Explains Python generator functions and the yield statement used for memory-efficient block processing."
+   ]
   }
  ],
  "metadata": {
