Add block_parse function for Problem 3

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -982,6 +982,73 @@
     "- URL: https://docs.python.org/3/howto/functional.html#generators\n",
     "- Relevance: Explains Python generator functions and the yield statement used for memory-efficient block processing."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f02cba7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================================\n",
+    "# PROBLEM 3: Padding\n",
+    "# ============================================================================\n",
+    "\n",
+    "def block_parse(msg):\n",
+    "    \"\"\"\n",
+    "    Generator function that pads and parses a message into 512-bit blocks.\n",
+    "    \n",
+    "    Implements SHA-256 padding from FIPS 180-4:\n",
+    "    - Append bit '1' (byte 0x80)\n",
+    "    - Append zero bytes until length ≡ 448 (mod 512) bits\n",
+    "    - Append 64-bit big-endian representation of original message length\n",
+    "    \n",
+    "    Args:\n",
+    "        msg: bytes object containing the message to be padded and parsed\n",
+    "    \n",
+    "    Yields:\n",
+    "        bytes: 512-bit (64-byte) blocks of the padded message\n",
+    "    \n",
+    "    Example:\n",
+    "        >>> for block in block_parse(b\"abc\"):\n",
+    "        ...     print(len(block))  # Should print 64\n",
+    "        64\n",
+    "    \"\"\"\n",
+    "    # Get the original message length in bits\n",
+    "    msg_len_bits = len(msg) * 8\n",
+    "    \n",
+    "    # Start with the original message\n",
+    "    padded = bytearray(msg)\n",
+    "    \n",
+    "    # Step 1: Append the '1' bit (0x80 = 10000000 in binary)\n",
+    "    padded.append(0x80)\n",
+    "    \n",
+    "    # Step 2: Calculate how many zero bytes we need\n",
+    "    # We need the total length to be 448 bits (56 bytes) mod 512 bits (64 bytes)\n",
+    "    # Length so far: len(msg) + 1 byte (the 0x80)\n",
+    "    # We need: (current_length + zero_bytes + 8) % 64 == 0\n",
+    "    # Or equivalently: current_length + zero_bytes ≡ 56 (mod 64)\n",
+    "    \n",
+    "    current_len = len(padded)\n",
+    "    \n",
+    "    # Calculate zero bytes needed\n",
+    "    if current_len % 64 <= 56:\n",
+    "        # We can fit in the current block\n",
+    "        zero_bytes = 56 - (current_len % 64)\n",
+    "    else:\n",
+    "        # We need to go into the next block\n",
+    "        zero_bytes = 64 - (current_len % 64) + 56\n",
+    "    \n",
+    "    # Append the zero bytes\n",
+    "    padded.extend(b'\\x00' * zero_bytes)\n",
+    "    \n",
+    "    # Step 3: Append the original message length as 64-bit big-endian integer\n",
+    "    padded.extend(msg_len_bits.to_bytes(8, byteorder='big'))\n",
+    "    \n",
+    "    # Step 4: Yield 512-bit (64-byte) blocks\n",
+    "    for i in range(0, len(padded), 64):\n",
+    "        yield bytes(padded[i:i+64])"
+   ]
   }
  ],
  "metadata": {
