--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ea303b3e",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -262,19 +262,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "55444694",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Test 1 the Parity function\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m x = \u001b[43mnp\u001b[49m.uint32(\u001b[32m0b1100\u001b[39m)\n\u001b[32m      3\u001b[39m y = np.uint32(\u001b[32m0b1010\u001b[39m)\n\u001b[32m      4\u001b[39m z = np.uint32(\u001b[32m0b0110\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parity(12, 10, 6) = 0\n",
+      "Binary: 0b0\n",
+      "Test 1.2: Parity(0, 0, 0) = 0 (Expected: 0)\n",
+      "Test 1.3: Parity(all 1s) = 0xffffffff (Expected: 0xffffffff)\n"
      ]
     }
    ],
@@ -305,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -353,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -411,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -457,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -503,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -549,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9606eb9e",
    "metadata": {},
    "outputs": [
@@ -645,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4f56ab7c",
    "metadata": {},
    "outputs": [
@@ -985,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f02cba7a",
    "metadata": {},
    "outputs": [],
@@ -1048,6 +1047,141 @@
     "    # Step 4: Yield 512-bit (64-byte) blocks\n",
     "    for i in range(0, len(padded), 64):\n",
     "        yield bytes(padded[i:i+64])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4ff5b36",
+   "metadata": {},
+   "source": [
+    "### Testing the Padding Function\n",
+    "\n",
+    "The `block_parse()` function is tested with five different scenarios to verify correctness and handle edge cases:\n",
+    "\n",
+    "1. **Empty message** - Tests the minimum case where only padding is added\n",
+    "2. **Short message (\"abc\")** - Standard test case from FIPS 180-4 examples\n",
+    "3. **55-byte message** - Boundary case that fits exactly in one block with padding\n",
+    "4. **56-byte message** - Boundary case that requires two blocks (padding won't fit in first block)\n",
+    "5. **120-byte message** - Tests multiple block generation\n",
+    "\n",
+    "Each test verifies that:\n",
+    "- All blocks are exactly 64 bytes (512 bits)\n",
+    "- The correct number of blocks is generated\n",
+    "- The padding format matches SHA-256 specification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f43a195e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "PROBLEM 3: Testing Message Padding and Parsing\n",
+      "======================================================================\n",
+      "\n",
+      "--- Test 1: Empty message ---\n",
+      "Message: b''\n",
+      "Message length: 0 bytes\n",
+      "Number of blocks: 1\n",
+      "First block length: 64 bytes (expected: 64)\n",
+      "First block (hex): 80000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000\n",
+      "\n",
+      "--- Test 2: Short message 'abc' ---\n",
+      "Message: b'abc'\n",
+      "Message length: 3 bytes\n",
+      "Number of blocks: 1\n",
+      "First block length: 64 bytes (expected: 64)\n",
+      "First block (hex): 61626380000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000018\n",
+      "\n",
+      "--- Test 3: 55-byte message (boundary case) ---\n",
+      "Message: 55 'a' characters\n",
+      "Message length: 55 bytes\n",
+      "Number of blocks: 1\n",
+      "Block 1 length: 64 bytes\n",
+      "\n",
+      "--- Test 4: 56-byte message (boundary case) ---\n",
+      "Message: 56 'a' characters\n",
+      "Message length: 56 bytes\n",
+      "Number of blocks: 2\n",
+      "Block 1 length: 64 bytes\n",
+      "Block 2 length: 64 bytes\n",
+      "\n",
+      "--- Test 5: 120-byte message (multiple blocks) ---\n",
+      "Message: 120 'x' characters\n",
+      "Message length: 120 bytes\n",
+      "Number of blocks: 3\n",
+      "Block 1 length: 64 bytes\n",
+      "Block 2 length: 64 bytes\n",
+      "Block 3 length: 64 bytes\n",
+      "\n",
+      "======================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----------------------------------------------------------------------------\n",
+    "# Test the block_parse generator\n",
+    "# ----------------------------------------------------------------------------\n",
+    "print(\"=\" * 70)\n",
+    "print(\"PROBLEM 3: Testing Message Padding and Parsing\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# Test 1: Empty message\n",
+    "print(\"\\n--- Test 1: Empty message ---\")\n",
+    "msg = b\"\"\n",
+    "blocks = list(block_parse(msg))\n",
+    "print(f\"Message: {repr(msg)}\")\n",
+    "print(f\"Message length: {len(msg)} bytes\")\n",
+    "print(f\"Number of blocks: {len(blocks)}\")\n",
+    "print(f\"First block length: {len(blocks[0])} bytes (expected: 64)\")\n",
+    "print(f\"First block (hex): {blocks[0].hex()}\")\n",
+    "\n",
+    "# Test 2: Short message - \"abc\"\n",
+    "print(\"\\n--- Test 2: Short message 'abc' ---\")\n",
+    "msg = b\"abc\"\n",
+    "blocks = list(block_parse(msg))\n",
+    "print(f\"Message: {repr(msg)}\")\n",
+    "print(f\"Message length: {len(msg)} bytes\")\n",
+    "print(f\"Number of blocks: {len(blocks)}\")\n",
+    "print(f\"First block length: {len(blocks[0])} bytes (expected: 64)\")\n",
+    "print(f\"First block (hex): {blocks[0].hex()}\")\n",
+    "\n",
+    "# Test 3: Message exactly 55 bytes (boundary case - fits in one block)\n",
+    "print(\"\\n--- Test 3: 55-byte message (boundary case) ---\")\n",
+    "msg = b\"a\" * 55\n",
+    "blocks = list(block_parse(msg))\n",
+    "print(f\"Message: 55 'a' characters\")\n",
+    "print(f\"Message length: {len(msg)} bytes\")\n",
+    "print(f\"Number of blocks: {len(blocks)}\")\n",
+    "for i, block in enumerate(blocks):\n",
+    "    print(f\"Block {i+1} length: {len(block)} bytes\")\n",
+    "\n",
+    "# Test 4: Message exactly 56 bytes (boundary case - needs two blocks)\n",
+    "print(\"\\n--- Test 4: 56-byte message (boundary case) ---\")\n",
+    "msg = b\"a\" * 56\n",
+    "blocks = list(block_parse(msg))\n",
+    "print(f\"Message: 56 'a' characters\")\n",
+    "print(f\"Message length: {len(msg)} bytes\")\n",
+    "print(f\"Number of blocks: {len(blocks)}\")\n",
+    "for i, block in enumerate(blocks):\n",
+    "    print(f\"Block {i+1} length: {len(block)} bytes\")\n",
+    "\n",
+    "# Test 5: Long message (multiple blocks)\n",
+    "print(\"\\n--- Test 5: 120-byte message (multiple blocks) ---\")\n",
+    "msg = b\"x\" * 120\n",
+    "blocks = list(block_parse(msg))\n",
+    "print(f\"Message: 120 'x' characters\")\n",
+    "print(f\"Message length: {len(msg)} bytes\")\n",
+    "print(f\"Number of blocks: {len(blocks)}\")\n",
+    "for i, block in enumerate(blocks):\n",
+    "    print(f\"Block {i+1} length: {len(block)} bytes\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)"
    ]
   }
  ],
