--- a/problems.ipynb
+++ b/problems.ipynb
@@ -1193,6 +1193,35 @@
     "\n",
     "This problem successfully implemented the SHA-256 message padding and parsing mechanism as specified in FIPS 180-4. The `block_parse()` generator function correctly pads messages of any length by appending a '1' bit (0x80), zero padding to reach the required length, and a 64-bit representation of the original message length in bits. All test cases passed, including edge cases like empty messages, boundary cases at 55 and 56 bytes, and multi-block messages. The use of a Python generator makes the implementation memory-efficient, as it yields 512-bit blocks one at a time rather than storing the entire padded message in memory. This padding mechanism is essential for SHA-256 security, preventing length extension attacks and ensuring that each unique message produces a unique padded output."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8da57ca1",
+   "metadata": {},
+   "source": [
+    "## Problem 4: Hashes\n",
+    "\n",
+    "### Introduction\n",
+    "\n",
+    "This problem implements the core SHA-256 hash computation function as specified in FIPS 180-4, Section 6.2.2 (page 22). This function takes a current hash value and a 512-bit message block, then produces the next hash value through 64 rounds of complex bitwise operations. Each round uses the functions implemented in Problem 1 (Ch, Maj, Σ₀, Σ₁, σ₀, σ₁), the constants generated in Problem 2 (K values), and processes blocks produced by Problem 3's padding function. The hash computation is the heart of SHA-256, transforming input data through a one-way function that makes it computationally infeasible to reverse or find collisions.\n",
+    "\n",
+    "### Solution Approach\n",
+    "\n",
+    "The solution implements the SHA-256 compression function which operates in several stages: First, the 512-bit message block is expanded into a 64-word message schedule using the sigma functions. Then, eight working variables (a-h) are initialized with the current hash value. For each of the 64 rounds, temporary values T1 and T2 are calculated using the Ch, Maj, Sigma0, and Sigma1 functions along with the message schedule and round constants. The working variables are updated in a specific pattern that ensures thorough mixing. Finally, the working variables are added to the current hash value to produce the next hash value. This process is repeated for each message block until all blocks are processed.\n",
+    "\n",
+    "### References\n",
+    "\n",
+    "**FIPS 180-4: Secure Hash Standard**\n",
+    "- National Institute of Standards and Technology (NIST)\n",
+    "- URL: https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf\n",
+    "- Section 6.2.2, Page 22 - SHA-256 Hash Computation\n",
+    "- Section 5.3.3, Page 15 - Initial Hash Value\n",
+    "- Relevance: Official specification for the SHA-256 compression function and initial hash values.\n",
+    "\n",
+    "**Wikipedia - Merkle–Damgård construction**\n",
+    "- URL: https://en.wikipedia.org/wiki/Merkle%E2%80%93Damg%C3%A5rd_construction\n",
+    "- Relevance: Explains the iterative structure used by SHA-256 where each block's hash becomes input to the next block's computation."
+   ]
   }
  ],
  "metadata": {
