Add initial hash values and constants for Problem 4

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -1222,6 +1222,69 @@
     "- URL: https://en.wikipedia.org/wiki/Merkle%E2%80%93Damg%C3%A5rd_construction\n",
     "- Relevance: Explains the iterative structure used by SHA-256 where each block's hash becomes input to the next block's computation."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4da5b1b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ============================================================================\n",
+    "# PROBLEM 4: Hashes\n",
+    "# ============================================================================\n",
+    "\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# STEP 1: Define Initial Hash Value H(0)\n",
+    "# ----------------------------------------------------------------------------\n",
+    "\n",
+    "# Initial hash values for SHA-256 (from FIPS 180-4, Section 5.3.3, Page 15)\n",
+    "# These are the first 32 bits of the fractional parts of the square roots\n",
+    "# of the first 8 prime numbers (2, 3, 5, 7, 11, 13, 17, 19)\n",
+    "\n",
+    "H_INITIAL = [\n",
+    "    np.uint32(0x6a09e667),  # sqrt(2)\n",
+    "    np.uint32(0xbb67ae85),  # sqrt(3)\n",
+    "    np.uint32(0x3c6ef372),  # sqrt(5)\n",
+    "    np.uint32(0xa54ff53a),  # sqrt(7)\n",
+    "    np.uint32(0x510e527f),  # sqrt(11)\n",
+    "    np.uint32(0x9b05688c),  # sqrt(13)\n",
+    "    np.uint32(0x1f83d9ab),  # sqrt(17)\n",
+    "    np.uint32(0x5be0cd19),  # sqrt(19)\n",
+    "]\n",
+    "\n",
+    "# K constants from Problem 2 (the 64 round constants)\n",
+    "# These are the first 32 bits of the fractional parts of the cube roots\n",
+    "# of the first 64 prime numbers\n",
+    "K = [\n",
+    "    np.uint32(0x428a2f98), np.uint32(0x71374491), np.uint32(0xb5c0fbcf), np.uint32(0xe9b5dba5),\n",
+    "    np.uint32(0x3956c25b), np.uint32(0x59f111f1), np.uint32(0x923f82a4), np.uint32(0xab1c5ed5),\n",
+    "    np.uint32(0xd807aa98), np.uint32(0x12835b01), np.uint32(0x243185be), np.uint32(0x550c7dc3),\n",
+    "    np.uint32(0x72be5d74), np.uint32(0x80deb1fe), np.uint32(0x9bdc06a7), np.uint32(0xc19bf174),\n",
+    "    np.uint32(0xe49b69c1), np.uint32(0xefbe4786), np.uint32(0x0fc19dc6), np.uint32(0x240ca1cc),\n",
+    "    np.uint32(0x2de92c6f), np.uint32(0x4a7484aa), np.uint32(0x5cb0a9dc), np.uint32(0x76f988da),\n",
+    "    np.uint32(0x983e5152), np.uint32(0xa831c66d), np.uint32(0xb00327c8), np.uint32(0xbf597fc7),\n",
+    "    np.uint32(0xc6e00bf3), np.uint32(0xd5a79147), np.uint32(0x06ca6351), np.uint32(0x14292967),\n",
+    "    np.uint32(0x27b70a85), np.uint32(0x2e1b2138), np.uint32(0x4d2c6dfc), np.uint32(0x53380d13),\n",
+    "    np.uint32(0x650a7354), np.uint32(0x766a0abb), np.uint32(0x81c2c92e), np.uint32(0x92722c85),\n",
+    "    np.uint32(0xa2bfe8a1), np.uint32(0xa81a664b), np.uint32(0xc24b8b70), np.uint32(0xc76c51a3),\n",
+    "    np.uint32(0xd192e819), np.uint32(0xd6990624), np.uint32(0xf40e3585), np.uint32(0x106aa070),\n",
+    "    np.uint32(0x19a4c116), np.uint32(0x1e376c08), np.uint32(0x2748774c), np.uint32(0x34b0bcb5),\n",
+    "    np.uint32(0x391c0cb3), np.uint32(0x4ed8aa4a), np.uint32(0x5b9cca4f), np.uint32(0x682e6ff3),\n",
+    "    np.uint32(0x748f82ee), np.uint32(0x78a5636f), np.uint32(0x84c87814), np.uint32(0x8cc70208),\n",
+    "    np.uint32(0x90befffa), np.uint32(0xa4506ceb), np.uint32(0xbef9a3f7), np.uint32(0xc67178f2),\n",
+    "]\n",
+    "\n",
+    "print(\"=\" * 70)\n",
+    "print(\"PROBLEM 4: SHA-256 Hash Computation\")\n",
+    "print(\"=\" * 70)\n",
+    "print(\"\\nInitial Hash Values (H⁽⁰⁾):\")\n",
+    "for i, h in enumerate(H_INITIAL):\n",
+    "    print(f\"H[{i}] = 0x{h:08x}\")\n",
+    "\n",
+    "print(f\"\\nRound Constants (K): {len(K)} values loaded\")\n",
+    "print(\"=\" * 70)"
+   ]
   }
  ],
  "metadata": {
