Implement SHA-256 hash compression function

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "ea303b3e",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "9606eb9e",
    "metadata": {},
    "outputs": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "4f56ab7c",
    "metadata": {},
    "outputs": [
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "f02cba7a",
    "metadata": {},
    "outputs": [],
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "f43a195e",
    "metadata": {},
    "outputs": [
@@ -1225,10 +1225,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "4da5b1b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "PROBLEM 4: SHA-256 Hash Computation\n",
+      "======================================================================\n",
+      "\n",
+      "Initial Hash Values (H⁽⁰⁾):\n",
+      "H[0] = 0x6a09e667\n",
+      "H[1] = 0xbb67ae85\n",
+      "H[2] = 0x3c6ef372\n",
+      "H[3] = 0xa54ff53a\n",
+      "H[4] = 0x510e527f\n",
+      "H[5] = 0x9b05688c\n",
+      "H[6] = 0x1f83d9ab\n",
+      "H[7] = 0x5be0cd19\n",
+      "\n",
+      "Round Constants (K): 64 values loaded\n",
+      "======================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# ============================================================================\n",
     "# PROBLEM 4: Hashes\n",
@@ -1283,6 +1306,100 @@
     "    print(f\"H[{i}] = 0x{h:08x}\")\n",
     "\n",
     "print(f\"\\nRound Constants (K): {len(K)} values loaded\")\n",
+    "print(\"=\" * 70)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b23bd19a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "Hash compression function implemented successfully!\n",
+      "======================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----------------------------------------------------------------------------\n",
+    "# STEP 2: Hash Compression Function\n",
+    "# ----------------------------------------------------------------------------\n",
+    "\n",
+    "def hash(current, block):\n",
+    "    \"\"\"\n",
+    "    SHA-256 compression function - computes next hash value from current hash and message block.\n",
+    "    \n",
+    "    Implements Section 6.2.2 of FIPS 180-4 (page 22).\n",
+    "    \n",
+    "    Args:\n",
+    "        current: List of 8 np.uint32 values representing current hash state H(i-1)\n",
+    "        block: 64-byte (512-bit) message block as bytes object\n",
+    "    \n",
+    "    Returns:\n",
+    "        List of 8 np.uint32 values representing next hash state H(i)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Step 1: Prepare the message schedule W (64 words)\n",
+    "    W = []\n",
+    "    \n",
+    "    # First 16 words come directly from the message block (32 bits = 4 bytes each)\n",
+    "    for i in range(16):\n",
+    "        # Extract 4 bytes and convert to 32-bit word (big-endian)\n",
+    "        word = np.uint32(int.from_bytes(block[i*4:(i+1)*4], byteorder='big'))\n",
+    "        W.append(word)\n",
+    "    \n",
+    "    # Extend to 64 words using sigma0 and sigma1 functions\n",
+    "    for i in range(16, 64):\n",
+    "        # W[t] = sigma1(W[t-2]) + W[t-7] + sigma0(W[t-15]) + W[t-16]\n",
+    "        s0 = sigma0(W[i-15])\n",
+    "        s1 = sigma1(W[i-2])\n",
+    "        W.append(np.uint32(s1 + W[i-7] + s0 + W[i-16]))\n",
+    "    \n",
+    "    # Step 2: Initialize working variables with current hash value\n",
+    "    a, b, c, d, e, f, g, h = current\n",
+    "    \n",
+    "    # Step 3: Perform 64 rounds of hashing\n",
+    "    for t in range(64):\n",
+    "        # Calculate T1 = h + Sigma1(e) + Ch(e,f,g) + K[t] + W[t]\n",
+    "        T1 = np.uint32(h + Sigma1(e) + Ch(e, f, g) + K[t] + W[t])\n",
+    "        \n",
+    "        # Calculate T2 = Sigma0(a) + Maj(a,b,c)\n",
+    "        T2 = np.uint32(Sigma0(a) + Maj(a, b, c))\n",
+    "        \n",
+    "        # Update working variables\n",
+    "        h = g\n",
+    "        g = f\n",
+    "        f = e\n",
+    "        e = np.uint32(d + T1)\n",
+    "        d = c\n",
+    "        c = b\n",
+    "        b = a\n",
+    "        a = np.uint32(T1 + T2)\n",
+    "    \n",
+    "    # Step 4: Compute the intermediate hash value H(i)\n",
+    "    # Add the working variables to the current hash value\n",
+    "    next_hash = [\n",
+    "        np.uint32(current[0] + a),\n",
+    "        np.uint32(current[1] + b),\n",
+    "        np.uint32(current[2] + c),\n",
+    "        np.uint32(current[3] + d),\n",
+    "        np.uint32(current[4] + e),\n",
+    "        np.uint32(current[5] + f),\n",
+    "        np.uint32(current[6] + g),\n",
+    "        np.uint32(current[7] + h),\n",
+    "    ]\n",
+    "    \n",
+    "    return next_hash\n",
+    "\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"Hash compression function implemented successfully!\")\n",
     "print(\"=\" * 70)"
    ]
   }
