Add complete SHA-256 function combining padding and hashing

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "ea303b3e",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "9606eb9e",
    "metadata": {},
    "outputs": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "4f56ab7c",
    "metadata": {},
    "outputs": [
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "id": "f02cba7a",
    "metadata": {},
    "outputs": [],
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "f43a195e",
    "metadata": {},
    "outputs": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "id": "4da5b1b4",
    "metadata": {},
    "outputs": [
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "id": "b23bd19a",
    "metadata": {},
    "outputs": [
@@ -1400,6 +1400,62 @@
     "\n",
     "print(\"\\n\" + \"=\" * 70)\n",
     "print(\"Hash compression function implemented successfully!\")\n",
+    "print(\"=\" * 70)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3394ebe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "Complete SHA-256 function implemented!\n",
+      "======================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----------------------------------------------------------------------------\n",
+    "# STEP 3: Complete SHA-256 Function\n",
+    "# ----------------------------------------------------------------------------\n",
+    "\n",
+    "def sha256(msg):\n",
+    "    \"\"\"\n",
+    "    Complete SHA-256 hash function.\n",
+    "    \n",
+    "    Combines padding (Problem 3) and hash computation (Problem 4) to produce\n",
+    "    the final 256-bit hash of a message.\n",
+    "    \n",
+    "    Args:\n",
+    "        msg: bytes object containing the message to hash\n",
+    "    \n",
+    "    Returns:\n",
+    "        bytes: 32-byte (256-bit) SHA-256 hash digest\n",
+    "    \"\"\"\n",
+    "    # Start with the initial hash value\n",
+    "    current_hash = H_INITIAL.copy()\n",
+    "    \n",
+    "    # Process each 512-bit block from the padded message\n",
+    "    for block in block_parse(msg):\n",
+    "        current_hash = hash(current_hash, block)\n",
+    "    \n",
+    "    # Convert the final hash value to bytes (big-endian)\n",
+    "    digest = b''.join(h.tobytes() for h in current_hash)\n",
+    "    \n",
+    "    # Reverse byte order for each word (numpy uses little-endian by default)\n",
+    "    digest = b''.join(digest[i:i+4][::-1] for i in range(0, 32, 4))\n",
+    "    \n",
+    "    return digest\n",
+    "\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"Complete SHA-256 function implemented!\")\n",
     "print(\"=\" * 70)"
    ]
   }
