Testing SHA-256 implementation

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -1458,6 +1458,16 @@
     "print(\"Complete SHA-256 function implemented!\")\n",
     "print(\"=\" * 70)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e01a7647",
+   "metadata": {},
+   "source": [
+    "###Testing SHA-256 Implementation\n",
+    "\n",
+    "We test the complete SHA-256 implementation using known test vectors from FIPS 180-4 and other official sources. These tests verify that our implementation produces identical results to the standard SHA-256 algorithm"
+   ]
   }
  ],
  "metadata": {
